@@ -39,11 +39,24 @@ CLEANFILES = $(BUILT_SOURCES)
 lib_LTLIBRARIES    = libedit.la
 libedit_la_SOURCES = chared.c common.c el.c emacs.c hist.c keymacro.c map.c chartype.c parse.c \
 							prompt.c read.c refresh.c search.c sig.c terminal.c tty.c vi.c \
-							fgetln.c strlcat.c strlcpy.c unvis.c vis.c wcsdup.c tokenizer.c \
+							fgetln.c wcsdup.c tokenizer.c \
 							history.c filecomplete.c readline.c chared.h el.h hist.h \
 							histedit.h keymacro.h map.h chartype.h parse.h prompt.h read.h refresh.h \
 							search.h sig.h sys.h terminal.h tty.h vis.h filecomplete.h \
 							editline/readline.h
+
+if !HAVE_STRLCPY
+libedit_la_SOURCES += strlcpy.c
+endif
+if !HAVE_STRLCAT
+libedit_la_SOURCES += strlcat.c
+endif
+if !HAVE_VIS
+libedit_la_SOURCES += vis.c
+endif
+if !HAVE_UNVIS
+libedit_la_SOURCES += unvis.c
+endif
 if WIDECHAR
 libedit_la_SOURCES += eln.c
 endif
